--- a/views/base/main_base.html
+++ b/views/base/main_base.html
@@ -12,10 +12,17 @@
   head.load(
     "/static/lib/font-awesome-bower/css/font-awesome.css",
     "/static/lib/libs.min.css",
-    "/static/css/main.css"
+    "/static/css/main.css",
+    "/static/css/night.css"
     );
   var music_dir = "{{music_dir}}";
-  var music_dir_set = "{{music_dir_set}}" === "true";
+  var music_dir_set = "{{music_dir_set}}" === "true";/*
+  function setTimedStylesheet() {
+  var theTime = new Date().getHours();
+  if (8 <= theTime&&theTime < 20) { document.write("<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css' type='text/css'>");}
+  else { document.write("<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cyborg/bootstrap.min.css' type='text/css'>"); }
+  }
+  setTimedStylesheet();*/
   </script>
   {% block head %}
   {% endblock %}
@@ -23,7 +30,7 @@
 <body>
   {% if menu %}
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <a class="navbar-brand" href="/">Node Music Player</a>
+    <a class="navbar-brand" href="#">ohnx's music online</a>
     <ul class="nav navbar-nav">
       <li><a href="/">Music</a></li>
       <li class='dropdown'>
