--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,10 +21,12 @@ body{
   margin-left: 200px;
   padding: 20px;
   padding-bottom: 0px;
+  overflow-x: hidden;
 }
 #content > div{
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 #content > div > h1{
   margin-top: 10px;
@@ -358,4 +360,12 @@ tr:hover .options{
 /*** custom generic classes ***/
 .pointer{
   cursor: pointer;
+}
+/*** add playlist button styling ***/
+.add_playlist{
+  font-size: 30px;
+}
+/*** playlist header ***/
+#playlist_header {
+ font-size: 40px;
 }
