--- a/views/base/main_base.html
+++ b/views/base/main_base.html
@@ -16,13 +16,13 @@
     "/static/css/night.css"
     );
   var music_dir = "{{music_dir}}";
-  var music_dir_set = "{{music_dir_set}}" === "true";/*
+  var music_dir_set = "{{music_dir_set}}" === "true";
   function setTimedStylesheet() {
   var theTime = new Date().getHours();
-  if (8 <= theTime&&theTime < 20) { document.write("<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css' type='text/css'>");}
-  else { document.write("<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cyborg/bootstrap.min.css' type='text/css'>"); }
+  if (8 <= theTime&&theTime < 20) { document.write("<link rel='stylesheet' href=\"/static/css/night.css\" type='text/css'>");}
+  else { document.write("<link rel='stylesheet' href='/static/css/day.css' type='text/css'>"); }
   }
-  setTimedStylesheet();*/
+  setTimedStylesheet();
   </script>
   {% block head %}
   {% endblock %}
@@ -30,7 +30,7 @@
 <body>
   {% if menu %}
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <a class="navbar-brand" href="#">ohnx's music online</a>
+    <a class="navbar-brand" href="#playlist/LIBRARY">ohnx's music online</a>
     <ul class="nav navbar-nav">
       <li><a href="/">Music</a></li>
       <li class='dropdown'>
