--- a/views/index.html
+++ b/views/index.html
@@ -46,25 +46,25 @@
       <span class="input-group-addon"><i class='fa fa-search'></i></span>
       <input type="text" class="form-control search-input" placeholder="Search" value="{{search}}">
     </div>
-    <h3>{{title}}</h3>
+    <h2>{{title}}</h2>
     <ul class="nav disable_selection custom_scrollbar">
-      {% if fixed %}<li class='dropdown-header'>Auto-Playlists</li>{% endif %}
+      <!--{% if fixed %}<li class='dropdown-header'>Auto-Playlists</li>{% endif %}-->
       {% for playlist in fixed %}
         <li><a href="#playlist/{{playlist.attributes._id}}">{{playlist.attributes.title}}</a></li>
       {% endfor %}
-      {% if fixed %}<li class='dropdown-header'>Playlists</li>{% endif %}
+      <!--{% if fixed %}<li class='dropdown-header'>Playlists</li>{% endif %}-->
       {% for playlist in editable %}
         <li><a href="#playlist/{{playlist.attributes._id}}">{{playlist.attributes.title}}</a></li>
       {% endfor %}
     </ul>
     <div class='sidebar_controls'>
-    <button class='add_playlist btn btn-default'>Add Playlist</button>
+    <button class='add_playlist btn btn-bubbly'><i class="fa fa-plus"></i></button>
     </div>
   </div>
 </script>
 <script type='text/swig' id='song_template'>
   <div class='playlist_meta'>
-    <h1><span id='playlist_header'>{{title}}</span>
+    <h1><span id='playlist_header'>{{title}}</span></h1>
     {% if editable %}
       <div class="btn-group">
         <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
