day/night mix up

--- a/views/base/main_base.html
+++ b/views/base/main_base.html
@@ -19,8 +19,8 @@
   var music_dir_set = "{{music_dir_set}}" === "true";
   function setTimedStylesheet() {
   var theTime = new Date().getHours();
-  if (8 <= theTime&&theTime < 20) { document.write("<link rel='stylesheet' href=\"/static/css/night.css\" type='text/css'>");}
-  else { document.write("<link rel='stylesheet' href='/static/css/day.css' type='text/css'>"); }
+  if (6 <= theTime&&theTime < 20) { document.write("<link rel='stylesheet' href=\"/static/css/day.css\" type='text/css'>");}
+  else { document.write("<link rel='stylesheet' href='/static/css/night.css' type='text/css'>"); }
   }
   setTimedStylesheet();
   </script>
