--- a/views/index.html
+++ b/views/index.html
@@ -251,6 +251,12 @@
       <input type="text" class="form-control" id="country_code" value="{{country_code}}">
     </div>
   </div>
+  <div class="form-group">
+    <label for="require_auth" class="col-sm-2 control-label">Require Authentication</label>
+    <div class="col-sm-10">
+      <input type="checkbox" class="form-control" id="require_auth" {{require_auth_is_checked}}>
+    </div>
+  </div>
 </form>
 </div>
 </script>
